--- a/ALLProject/reports/static/css/best_selling.css
+++ b/ALLProject/reports/static/css/best_selling.css
@@ -64,134 +64,12 @@ tbody.products {
 }
 
 tr.products {
+    background-color: #eaede6;
     vertical-align: middle;
     height: 2.5em;
 }
 
-#product-detail-box {
-    position: absolute;
-    top: 14vh;
-    left: 69%;
-    width: 30%;
-    height: 83vh;
-    background: #FFF;
-    border-radius: 20px;
-    justify-items: center;
-    overflow: hidden;
-}
-
-.product-detail {
-    width: 90%;
-    height: 85%;
-    justify-content: space-between;
-    margin-top: 5%;
-    margin-bottom: 5%;
-}
-
-.product-detail.mthSale {
-    width: 100%;
-    height: 5%;
-    display: flex;
-}
-
-.product-detail.prevSale {
-    width: 100%;
-    height: 5%;
-    display: flex;
-}
-
-.product-detail.supplier {
-    width: 100%;
-    height: 5%;
-    display: flex;
-}
-
-.product-detail.unit-cost {
-    width: 100%;
-    height: 5%;
-    display: flex;
-}
-
-.product-detail.price {
-    width: 100%;
-    height: 5%;
-    display: flex;
-}
-
-
-.logo {
-    width: 2em;
-    height: 2em;
-    padding-left: 2%;
-}
-
-.logo.dropdown {
-    width: 1em;
-    height: 1em;
-    padding-left: 1em;
-}
-
-.dropbtn {
-    width: 25%;
-    height: 4vh;
-    
-    margin: 0;
-    margin-right: 2%;
-    text-align: center;
-
-    border-radius: 20px;
-    border-style: solid;
-    border-width: 2px;
+.products.data:hover {
     background-color: #FFF;
-}
-
-.dropdown-button {
-    width: 100%;
-    height: 100%;
-    padding-top: 2.5%;
-    justify-items: center;
-}
-
-.dropdown-content {
-    visibility: hidden;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    background: #FFF;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
-
-.dropdown-content a {
-    color: black;
-    text-decoration: none;
-    display: block;
-    text-align: center;
-    padding: 0;
-    padding-top: 5%;
-    list-style: none;
-}
-  
-.dropdown-content li {
-    height: 5vh;
-}
-
-.dropdown-content li:hover {
-    background: #F8EDC8;
-}
-
-.dropbtn:hover {
-    background: #F8EDC8;
-    border-radius: 0;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    border: #F8EDC8;
-    .dropdown-content{
-        visibility: visible;
-    }
-}
-
-#graph {
-    width: 26.5vw;
-    height: 32vh;
-    background-color: antiquewhite;
+    box-shadow: 2px 2px 4px 2px rgba(222, 218, 203, 0.8);
 }
